--- a/packages/chronos-mfe/.docker.env
+++ b/packages/chronos-mfe/.docker.env
@@ -4,7 +4,9 @@ CHRONOS_API_BASEURL=${PROJECTSMO_CHRONOS_API_BASEURL}
 ENABLE_CHRONOS_ONEAPI=${PROJECTSMO_ENABLE_CHRONOS_ONEAPI}
 CHRONOS_ONEAPI_URL=${PROJECTSMO_ENABLE_CHRONOS_ONEAPI}
 STORAGE_API_BASEURL=${PROJECTSMO_STORAGE_API_BASEURL},
+REPORTS_API_BASEURL=${PROJECTSMO_REPORTS_API_BASEURL},
 CHRONOS_RELEASES_INFO_URL=${PROJECTSMO_CHRONOS_RELEASES_INFO_URL},
 ADS_EMAIL=${PROJECTSMO_ADS_EMAIL},
 CHRONOS_DOCUMENTATION_URL=${PROJECTSMO_CHRONOS_DOCUMENTATION_URL},
 CHRONOS_SWAGGER_URL=${PROJECTSMO_CHRONOS_SWAGGER_URL},
+TOU_HTML=${PROJECTSMO_TOU_HTML},
