--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -426,43 +426,6 @@ paths:
         500:
           description: "Internal error"
   
-  /forecasts/{id}/datagovernance:
-    patch:
-      tags:
-        - "forecast-projects"
-      summary: "adding lean governance to existing project for given Id for Forecast project."
-      description: "updating lean governance details."
-      operationId: "updateGovernanceValues"
-      parameters:
-        - name: "id"
-          in: "path"
-          description: "forecast project ID"
-          required: true
-          type: "string"
-        - name: "LeanGovernanceFeildVO"
-          in: "body"
-          description: "LeanGovernanceFeildVO to add forecast"
-          required: true
-          schema:
-           $ref: "#/definitions/LeanGovernanceFeildVO"
-      responses:
-        201:
-          description: "Returns message of success or failure "
-          schema:
-            $ref: "#/definitions/GenericMessage"
-        204:
-          description: "Fetch complete, no content found."
-        400:
-          description: "Bad Request"
-        401:
-          description: "Request does not have sufficient credentials."
-        403:
-          description: "Request is not authorized."
-        405:
-          description: "Method not allowed"
-        500:
-          description: "Internal error"
-  
   /forecasts/{id}/inputs/{savedinputid}:
     delete:
       tags:
@@ -1308,6 +1271,9 @@ definitions:
       apiKey:
         type: string
         description: apiKey for the project access
+      leanGovernanceFeilds:
+        $ref: "#/definitions/LeanGovernanceFeildVO"
+        description: lean governance details
   
   ForecastPermissionVO:
     type: object
