added Azure Blob Scanner Service

--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -1,5 +1,6 @@
 OIDC_DISABLED=${PROJECTSMO_FRONTEND_OIDC_DISABLED}
 API_BASEURL=${PROJECTSMO_FRONTEND_API_BASEURL}
+APP_URL=${PROJECTSMO_FRONTEND_APP_URL}
 LOGINREDIRECTURL=${PROJECTSMO_LOGIN_REDIRECT_URL}
 CLIENT_IDS=${PROJECTSMO_FRONTEND_CLIENT_IDS}
 REDIRECT_URLS=${PROJECTSMO_FRONTEND_REDIRECT_URLS}
@@ -91,3 +92,4 @@ MATOMO_API_BASEURL={PROJECTMO_MATOMO_API_BASEURL}
 MATOMO_APP_URL=${PROJECTMO_MATOMO_APP_URL}
 SPIRE_URL={PROJECTMO_SPIRE_URL}
 GENAI_DIRECT_CHAT_URL={PROJECTMO_GENAI_DIRECT_CHAT_URL}
+CLAMAV_IMAGE_URL={PROJECTMO_CLAMAV_IMAGE_URL}
