--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -7,6 +7,7 @@ OIDC_DISABLED=true
 
 # No need to set API_BASEURL for local development ApiClient files has it as per local Setup
 API_BASEURL=
+APP_URL=
 LOGINREDIRECTURL=
 DATA_PIPELINES_API_BASEURL =
 DATA_PIPELINES_APP_BASEURL =
@@ -17,6 +18,8 @@ MODEL_REGISTRY_API_BASEURL =
 
 #Local Development Variable Setup - END
 
+#Clamv-Azure image URL
+CLAMAV_IMAGE_URL = YOUR_CLAMAV_IMAGE_URL
 
 
 #DNA Application UI Configurable Values - START
