--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -1254,6 +1254,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/CollaboratorVO"
+      leanGovernanceFeilds:
+        $ref: "#/definitions/LeanGovernanceFeildVO"
+        description: lean governance details
       required:
         - name
   
@@ -1273,6 +1276,9 @@ definitions:
       apiKey:
         type: string
         description: apiKey for the project access
+      leanGovernanceFeilds:
+        $ref: "#/definitions/LeanGovernanceFeildVO"
+        description: lean governance details
   
   ForecastPermissionVO:
     type: object
@@ -1382,7 +1388,57 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/InputFileVO"
+      leanGovernanceFeilds:
+        $ref: "#/definitions/LeanGovernanceFeildVO"
+        description: lean governance details
   
+  LeanGovernanceFeildVO:
+    type: object
+    properties:
+      typeOfProject:
+        type: string
+        description: type of forecast
+      decription:
+        type: string
+        description: decription of forecast
+      division:
+        type: string
+        description: division of forecast
+      subDivision:
+        type: string
+        description: subDivision of forecast
+      department:
+        type: string
+        description: department of forecast
+      tags:
+        type: array
+        items:
+          type: string
+        description: tags of forecast
+      dataClassification:
+        type: string
+        description: dataClassification of forecast
+      piiData:
+        type: boolean
+        description: pii of forecast
+      archerId:
+        type: string
+        description: archerId of forecast
+      procedureId:
+        type: string
+        description: producerId of forecast
+      termsOfUse:
+        type: boolean
+        description: termsAndUse of forecast
+      required:
+        -description
+        -division
+        -subDivision
+        -department
+        -typeOfProject
+        -dataClassfication
+        -piiData
+        -termsOfUse
   
   ForecastRunRequestVO:
     type: object
