--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -82,6 +82,7 @@ SAC_TOOL_URL=${PROJECTMO_SAC_TOOL_URL}
 TERMS_OF_USE_CONTENT=${PROJECTMO_TOU_CONTENT}
 COMING_SOON_CONTENT=${PROJECTMO_COMING_SOON_CONTENT}
 DATA_MODEL_URL=${PROJECTMO_DATA_MODEL_URL}
+DATA_CATALOG_URL=${PROJECTMO_DATA_CATALOG_URL}
 CORPORATE_DATA_CATALOG_URL=${PROJECTMO_CORPORATE_DATA_CATALOG_URL}
 SMART_DATA_GOVERNANCE_URL=${PROJECTMO_SMART_DATA_GOVERNANCE_URL}
 BISO_CONTACTS_URL = ${PROJECTMO_BISO_CONTACTS_URL}
