--- a/packages/chronos-mfe/package.json
+++ b/packages/chronos-mfe/package.json
@@ -83,7 +83,7 @@
     "react": "18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "7.48.2",
     "react-plotly.js": "^2.6.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
