--- a/packages/datalake-mfe/package.json
+++ b/packages/datalake-mfe/package.json
@@ -84,7 +84,7 @@
     "react": "18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "7.48.2",
     "react-hotkeys-hook": "^4.3.7",
     "react-redux": "8.0.4",
     "react-router-dom": "^5.3.0",
