review changes from Boon

--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
@@ -141,6 +141,17 @@ paths:
       summary: "Get all workspace security configurations which are in requested state, waiting for processing."
       description: "Get all workspace security configurations which are in requested state, waiting for processing"
       operationId: "getWorkspaceConfigs"
+      parameters:
+          - name: offset
+            in: query
+            description: page number from which listing of SecurityConfigs should start. Offset. Example 2
+            required: false
+            type: integer
+          - name: limit
+            in: query
+            description: page size to limit the number of SecurityConfigs, Example 15
+            required: false
+            type: integer
       responses:
         201:
           description: "Returns message of success or failure"
