--- a/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
+++ b/packages/trino-backend/trino-backend-lib/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc.pathmatch.matching-strategy: ant_path_matcher
   application:
     name: trinio-registry-service
-    version: 1.2.1
+    version: 1.2.2
 
   flyway:
     enabled: ${FLYWAY_ENABLED:false}
@@ -76,7 +76,7 @@ trino:
   catalog:
     default: ${TRINO_CATALOG:XXXX}
     iceberg: ${TRINO_ICEBERG_CATALOG:XXXX}
-    delta: ${TRINO_ICEBERG_CATALOG:XXXX}
+    delta: ${TRINO_DELTA_CATALOG:XXXX}
   hadoop.remoteUser: ${TRINO_UNIX_HADOOP_REMOTEUSER:spring}
   kubernetes:
     namespace: ${TRINO_KUBE_NAMESPACE:XXXX}
