--- a/deployment/kubernetes/helm/charts/trino/templates/configmap-catalog.yaml
+++ b/deployment/kubernetes/helm/charts/trino/templates/configmap-catalog.yaml
@@ -10,6 +10,26 @@ metadata:
     heritage: {{ .Release.Service }}
     role: catalogs
 data:
+  deltalake.properties: |
+    connector.name=delta_lake
+    hive.metastore.uri=thrift://metastore.{{ .Values.namespace }}.svc.cluster.local:9083
+    delta.security=SYSTEM
+    delta.enable-non-concurrent-writes=true
+    hive.s3.endpoint={{ .Values.hivemetastore.minio.host }}
+    hive.s3.path-style-access=true
+    hive.s3.aws-access-key={{ .Values.hivemetastore.minio.accessKey }}
+    hive.s3.aws-secret-key={{ .Values.hivemetastore.minio.secretKey }}
+    hive.s3.ssl.enabled=false
+  iceberg.properties: |
+    connector.name=iceberg
+    iceberg.catalog.type=hive_metastore
+    hive.metastore.uri=thrift://metastore.{{ .Values.namespace }}.svc.cluster.local:9083
+    iceberg.security=SYSTEM
+    hive.s3.endpoint={{ .Values.hivemetastore.minio.host }}
+    hive.s3.path-style-access=true
+    hive.s3.aws-access-key={{ .Values.hivemetastore.minio.accessKey }}
+    hive.s3.aws-secret-key={{ .Values.hivemetastore.minio.secretKey }}
+    hive.s3.ssl.enabled=false    
   tpch.properties: |
     connector.name=tpch
     tpch.splits-per-node=4
@@ -19,7 +39,7 @@ data:
   hive.properties: |
     connector.name=hive
     hive.metastore.uri=thrift://metastore.{{ .Values.namespace }}.svc.cluster.local:9083
-    hive.allow-drop-table=true
+    #hive.allow-drop-table=true
     hive.max-partitions-per-scan=1000000
     hive.s3.endpoint={{ .Values.hivemetastore.minio.host }}
     hive.s3.path-style-access=true
