--- a/deployment/kubernetes/helm/charts/trino/values.yaml
+++ b/deployment/kubernetes/helm/charts/trino/values.yaml
@@ -3,6 +3,8 @@
 # Declare variables to be passed into your templates.
 appName: trino
 namespace: trino
+access-rules:
+  endpoint: trino-backend.trino/service/access
 cert:
   certManager: ""
 image:
