--- a/deployment/kubernetes/helm/charts/trino/templates/configmap-coordinator.yaml
+++ b/deployment/kubernetes/helm/charts/trino/templates/configmap-coordinator.yaml
@@ -49,10 +49,10 @@ data:
     query.max-memory={{ .Values.server.config.query.maxMemory }}
     query.max-memory-per-node={{ .Values.server.config.query.maxMemoryPerNode }}
     memory.heap-headroom-per-node={{ .Values.server.config.memory.heapHeadroomPerNode }}
-    discovery-server.enabled=true
+    # discovery-server.enabled=true
     discovery.uri=http://localhost:{{ .Values.service.port }}
     # needed for Presto ODBC driver
-    protocol.v1.alternate-header-name=Presto
+    # protocol.v1.alternate-header-name=Presto
 
   {{- if .Values.authentication.oidc.enabled }}
     http-server.authentication.type=oauth2,PASSWORD
@@ -106,13 +106,13 @@ data:
 
   access-control.properties: |
     access-control.name=file
-    security.config-file={{ .Values.access-rules.endpoint }}
+    security.config-file={{ .Values.accessRules.endpoint }}
     security.refresh-period=5s
     security.json-pointer=/data
   {{- if .Values.immuta.enabled }}
   immuta-access-control.properties: |
     access-control.name={{ .Values.immuta.name }}
-    access-control.config-files={{ .Values.access-rules.endpoint }}
+    access-control.config-files={{ .Values.accessRules.endpoint }}
     immuta.endpoint={{ .Values.immuta.endpoint }}
     immuta.apikey={{ .Values.immuta.apiKey }}
     immuta.allowed.non.immuta.datasource.operations={{ .Values.immuta.nonImmutaUserPermission }}
