--- a/deployment/kubernetes/helm/charts/trino/values.yaml
+++ b/deployment/kubernetes/helm/charts/trino/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 appName: trino
 namespace: trino
-access-rules:
+accessRules:
   endpoint: trino-backend.trino/service/access
 cert:
   certManager: ""
