--- a/packages/data-product-mfe/package.json
+++ b/packages/data-product-mfe/package.json
@@ -81,7 +81,7 @@
     "postcss-loader": "^7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
+    "react-hook-form": "7.48.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "redux": "^4.2.0",
