added ids sucessfully

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1240,9 +1240,15 @@ definitions:
       classificationType:
         type: string
         description: "Classification type for codespace"
+      divisionId:
+        type: string
+        description: "division Id for the codespace"
       division:
         type: string
         description: "division for the codespace"
+      subDivisionId:
+        type: string
+        description: "sub division Id for the codespace"
       subDivision:
         type: string
         description: "sub division for the codespace"
@@ -1255,9 +1261,6 @@ definitions:
       procedureID:
         type: string
         description: "producerId for the codespace"
-      permission:
-        type: string
-        description: "Read write admin permissions"
       tags:
         type: array
         items:
