adding requestedDate changes

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1085,6 +1085,8 @@ definitions:
           type: string
       isProtectedByDna:
         type: boolean
+      requestedDate:
+        type: string
       projectName:
         type: string
         
