changing department type  and adding pagination for recipe..

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -1255,8 +1255,9 @@ definitions:
         type: string
         description: "sub division for the codespace"
       department:
-        type: string
-        description: "department for the codespace"
+        type: array
+        items:
+          type: string
       archerId:
         type: string
         description: "archerId for the codespace"
