--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceRecipe.yaml
@@ -231,3 +231,14 @@ definitions:
       version:
         type: string
         description: "version of software"
+        
+  RecipeCollectionVO:
+    type: object
+    properties:
+      data:
+        type: array
+        items:
+          $ref: "#/definitions/RecipeVO"
+      count:
+        type: integer
+        description: "total number of records"
