--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -132,6 +132,7 @@ POWERBI_TRAINING_URL=YOUR_POWERBI_TRAINING_URL
 SAC_TRAINING_URL=YOUR_SAC_TRAINING_URL
 DATABRICKS_TRAINING_URL=YOUR_DATABRICKS_TRAINING_URL
 DIGITAL_CASE_PROGRAM_URL=YOUR_DIGITAL_CASE_PROGRAM_URL
+DATASPHERE_TRAINING_URL=YOUR_DATASPHERE_TRAINING_URL
 CHINA_TRAINING_URL=YOUR_CHINA_TRAINING_URL
 TRANSACTIONAL_DATA_URL=YOUR_TRANSACTIONAL_DATA_URL
 CARLA_ARCHITECTURE_URL=YOUR_CARLA_ARCHITECTURE_URL
