--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -68,6 +68,7 @@ POWERBI_TRAINING_URL=${PROJECTMO_POWERBI_TRAINING_URL}
 SAC_TRAINING_URL=${PROJECTMO_SAC_TRAINING_URL}
 DATABRICKS_TRAINING_URL=${PROJECTMO_DATABRICKS_TRAINING_URL}
 DIGITAL_CASE_PROGRAM_URL=${PROJECTMO_DIGITAL_CASE_PROGRAM_URL}
+DATASPHERE_TRAINING_URL=${PROJECTMO_DATASPHERE_TRAINING_URL}
 CHINA_TRAINING_URL=${PROJECTMO_CHINA_TRAINING_URL}
 TRANSACTIONAL_DATA_URL=${PROJECTMO_TRANSACTIONAL_DATA_URL}
 CARLA_ARCHITECTURE_URL=${PROJECTMO_CARLA_ARCHITECTURE_URL}
