--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -54,6 +54,7 @@ APP_FEEDBACK_EXTERNAL_URL=${PROJECTSMO_APP_FEEDBACK_EXTERNAL_URL}
 ENABLE_CODE_SPACE=${PROJECTSMO_ENABLE_CODE_SPACE}
 CODE_SPACE_API_BASEURL=${PROJECTSMO_CODE_SPACE_API_BASEURL}
 CODE_SPACE_GIT_PAT_APP_URL=${PROJECTSMO_CODE_SPACE_GIT_PAT_APP_URL}
+CODESPACE_OPENSEARCH_LOGS_URL=${PROJECTSMO_CODESPACE_OPENSEARCH_LOGS_URL}
 CODESPACE_OIDC_POPUP_URL: ${CODESPACE_OIDC_POPUP_URL},  
 CODESPACE_OIDC_POPUP_WAIT_TIME: ${CODESPACE_OIDC_POPUP_WAIT_TIME},
 ENABLE_CHRONOS_FORECASTING_SERVICE=${PROJECTMO_ENABLE_CHRONOS_FORECASTING_SERVICE}
