--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -68,7 +68,7 @@
     "@mui/material": "5.10.6",
     "@mui/system": "5.10.6",
     "@mui/x-date-pickers": "5.0.20",
-    "@react-pdf/renderer": "^3.0.0",
+    "@react-pdf/renderer": "3.2.0",
     "ace-builds": "^1.4.12",
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
