Added codereview changes for deploy and undeploy and update job controller

--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -806,6 +806,8 @@ definitions:
         type: string
       branch:
         type: string
+      gitjobRunID:
+        type: string
       required:
           -status
   CodeServerWorkspaceValidateVO:
