Code fixes for Alice Get API's and file rename for recipe management

--- a/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/WorkspaceAdmin.yaml
@@ -138,8 +138,8 @@ paths:
     get:
       tags:
         - "code-server-admin"
-      summary: "Get all workspace security configurations which are in requested state, waiting for processing."
-      description: "Get all workspace security configurations which are in requested state, waiting for processing"
+      summary: "Get all workspace security configurations which are in requested and accepted state, waiting for processing."
+      description: "Get all workspace security configurations which are in requested and accepted state, waiting for processing"
       operationId: "getWorkspaceConfigs"
       parameters:
           - name: offset
