--- a/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
+++ b/packages/code-server/code-server-lib/src/main/resources/api/Workspace.yaml
@@ -315,7 +315,7 @@ paths:
         500:
           description: "Internal error"
 
-  /workspaces/{id}/datagoverance:        
+  /workspaces/{id}/datagovernance:        
     patch:
       tags:
         - "code-server"
