--- a/packages/storage-backend/storage-lib/src/main/resources/api/Storage.yaml
+++ b/packages/storage-backend/storage-lib/src/main/resources/api/Storage.yaml
@@ -895,6 +895,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/BucketVo"
+      totalCount:
+        type: integer
+        description: "total number of records"
       warnings:
         type: array
         items:
