--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -116,6 +116,7 @@ ENABLE_CODE_SPACE=false
 CODE_SPACE_API_BASEURL=
 CODE_SPACE_GIT_PAT_APP_URL=
 CODESPACE_OPENSEARCH_LOGS_URL=
+CODESPACE_OPENSEARCH_BUILD_LOGS_URL=
 CODESPACE_OIDC_POPUP_URL=,
 CODESPACE_OIDC_POPUP_WAIT_TIME=,
 
