--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -1194,6 +1194,7 @@ definitions:
       workersCouncilApproval:
         description: "Checks if workers council is approved or not its a boolean value it can be true/false "
         type: boolean
+        default: false
   
   LinkVO:
     type: object
