removed Auth default and defaulting horizon to empty string

--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -563,6 +563,7 @@ paths:
           type: boolean
           description: flag whether to save file in request part to storage bucket for further runs
           required: false
+          default: false
         - in: formData
           name: runName
           type: string
